# Polem

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  WrapLem.i  lemmatization-rules-azon2.xml
.github/workflows/: docker-image.yml
cmake/Modules/: FindCorpus2.cmake  FindICU.cmake  FindMorfeusz.cmake  FindMorfeusz2.cmake  FindPwrUtils.cmake
corpus/: README  kpwr-1.1-fixed-keywords-nouns-train.tsv  kpwr-1.1-fixed-keywords-train.txt  kpwr-1.2-ne-test-fix.tsv  kpwr-1.2-ne-train-fix.tsv
cpp/: CMakeLists.txt  CascadeLemmatizer.cpp  CascadeLemmatizer.h  CascadeLemmatizer.java  DictionaryLemmatizer.cpp  DictionaryLemmatizer.h  Handler.cpp  Handler.h  Inflection.cpp  Inflection.h  JavaLem_wrap.cxx  LemJNI.java  NamLivPersonLemmatizer.cpp  NamLivPersonLemmatizer.h  NamLocLemmatizer.cpp  NamLocLemmatizer.h  OrthLemmatizer.cpp  OrthLemmatizer.h  README  README.md  RuleLemmatizer.cpp  RuleLemmatizer.h  WrapLem.i  main.cpp
cpp/cmake/Modules/: FindLibXML++.cmake  FindLibedit.cmake  FindLoki.cmake  FindMorfeusz2.cmake  FindPolem.cmake
cpp/dict/: inflection_nam_liv_person_last.txt  nelexicon2_nam_liv_person_first.txt
cpp/javawrap/: CascadeLemmatizer.java  JavaLem_wrap.cxx  Lem.java  LemJNI.java  README  SWIGTYPE_p_UnicodeString.java  WrapLem.java  WrapLemJNI.java  WrapLem_wrap.cxx
cpp/polem/: CascadeLemmatizer.cpp  CascadeLemmatizer.h  DictionaryLemmatizer.cpp  DictionaryLemmatizer.h  Inflection.cpp  Inflection.h  InflectionRule.cpp  InflectionRule.h  NamLivPersonLemmatizer.cpp  NamLivPersonLemmatizer.h  NamLocLemmatizer.cpp  NamLocLemmatizer.h  OrthLemmatizer.cpp  OrthLemmatizer.h  RuleLemmatizer.cpp  RuleLemmatizer.h  main.cpp
cpp/pythonwrap/: WrapLem.py  WrapLem_wrap.cxx
data/: kpwr-1.1-fixed-keywords-test.txt  kpwr-1.2-ne-train-fix.tsv  kpwr-1.2-ne-tune-fix.tsv
dict/: inflection_nam_loc.txt  lemmatization-rules-azon2.xml  sgjp-20160310-geograficzne.tab
docs/: local-installation.md  polem-usage.md
javawrap/: Main.java
javawrap/g419/polem/: CascadeLemmatizer.java  SWIGTYPE_p_UnicodeString.java  WrapLem.java  WrapLemJNI.java
polem/: CascadeLemmatizer.cpp  CascadeLemmatizer.h  DictionaryLemmatizer.cpp  DictionaryLemmatizer.h  Inflection.cpp  Inflection.h  InflectionRule.h  NamLivPersonLemmatizer.cpp  NamLivPersonLemmatizer.h  NamLocLemmatizer.cpp  NamLocLemmatizer.h  OrthLemmatizer.cpp  RuleLemmatizer.cpp  RuleLemmatizer.h
pythonwrap/: WrapLem.py  polem_test.py
rest-api/: app.py
rest-api/templates/: form.html
